test/tests/compiler/16_characters_and_strings/invalid_lex/unterminated_string.plx
pub fn main(none) i32 {
    ptr: *char = "foo\"
    return 0
}
